[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"
default-run = "aoc_2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
winnow = { version = "0.5.25", features = ["simd"] }
itertools = "0.12.0"
rangemap = "1.4.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "aoc"
harness = false
